# BIGAF-bot

./: .env.example  .gitignore  Cargo.toml  README.md  last_action_rate.txt  record.parquet
.github/workflows/: bot.yaml  deploy-frontend.yml  release.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BotChart.tsx  Dashboard.tsx  HistoryTable.tsx  mode-toggle.tsx  theme-provider.context.tsx  theme-provider.tsx  theme-provider.types.ts
frontend/src/components/ui/: button.tsx  dropdown-menu.tsx
frontend/src/lib/: parquet.ts
openspec/: project.md
openspec/changes/archive/2025-11-19-add-github-workflow/: proposal.md  tasks.md
openspec/changes/archive/2025-11-19-control-amount-via-env/: proposal.md  tasks.md
openspec/changes/archive/2025-11-19-implement-bot-logic/: proposal.md  tasks.md
openspec/changes/archive/2025-11-19-update-transaction-buffer/: proposal.md  tasks.md
openspec/changes/archive/2025-11-20-replace-txt-with-parquet/: proposal.md  tasks.md
openspec/changes/archive/2025-11-21-add-timestamp-to-record/: proposal.md  tasks.md
openspec/changes/archive/2025-11-22-add-dark-mode-toggle/: proposal.md  tasks.md
openspec/changes/archive/2025-11-22-add-frontend-dashboard/: design.md  proposal.md  tasks.md
openspec/specs/bot/: spec.md
openspec/specs/frontend/: spec.md
src/: constant.rs  main.rs  record.rs
src/contracts/: accountant_with_rate_providers.rs  erc20.rs  mod.rs  simplified_teller.rs
src/strategies/: vault.rs
(+30 files in other folders)
