[package]
name = "BIGAF-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy              = "1.0"
alloy-network      = "1.0"
alloy-primitives   = { version = "1.3", features = ["k256", "serde"] }
alloy-provider     = "1.0"
alloy-signer       = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
url = "2.5.7"
